--- a/_config.yml
+++ b/_config.yml
@@ -21,22 +21,21 @@
 title: Raul Ghișa
 author:
   name: Raul Ghișa
-email:
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  photo: /assets/images/photo.jpeg
+# email:
+# description: >- # this means to ignore newlines until "baseurl:"
+#   Write an awesome description for your new site here. You can edit this
+#   line in _config.yml. It will appear in your document head meta (for
+#   Google search results) and in your feed.xml site description.
 
 assets: /assets/
-photo: /assets/images/photo.jpeg
-# photo: /photo.jpeg
 
 # domain: raulghisa.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://raulghisa.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 twitter_username: raulghisax 
-github_username:  raulghisa
+github_username: raulghisa
 linkedin_username: raulghisa
 
 # Build settings
